--- a/status/report.tex
+++ b/status/report.tex
@@ -22,6 +22,33 @@
 \subsection{Organisatorisches}
 [hier Gantt-Diagramm einf\"ugen]
 
+\begin{gantt}{10}{9}
+    \begin{ganttitle}
+      \titleelement{Mai}{1}
+      \titleelement{Juni}{4}
+      \titleelement{Juli}{4}
+    \end{ganttitle}
+    \begin{ganttitle}
+      \titleelement{27.05.}{1}
+      \titleelement{03.06.}{1}
+      \titleelement{10.06.}{1}
+      \titleelement{17.06.}{1}
+      \titleelement{24.06.}{1}      
+      \titleelement{01.07.}{1}
+      \titleelement{08.07.}{1}
+      \titleelement{15.07.}{1}
+      \titleelement{22.07.}{1}
+    \end{ganttitle}
+    \ganttbar{Pipeline läuft}{0}{2}
+    \ganttmilestone[color=blue]{1. \textit{Sieve} läuft}{2}
+    \ganttbar{\textit{Sieves} einfügen}{2}{3}
+    \ganttmilestone[color=blue]{\textit{Sieves} laufen}{5}
+    \ganttbar{Evaluation}{5}{2}
+    \ganttbar[color=blue]{Bugfixes}{2}{5}
+    \ganttbar{Präsentation}{7}{1}
+    \ganttbar[color=blue]{Dokumentation}{5}{4}
+  \end{gantt}
+
 \section{Grundlagen}
 \subsection{Daten}
 PropBank in NLTK (Gr\"o\ss{}e)\\
