added Kevins changes + Palmer et al to lit.bib

--- a/status/lit.bib
+++ b/status/lit.bib
@@ -13,3 +13,20 @@ author={Pradhan, Sameer and Hacioglu, Kadri and Krugler, Valerie and Ward, Wayne
 pages={11-39},
 language={English}
 }
+@article{Palmer,
+ author = {Palmer, Martha and Gildea, Daniel and Kingsbury, Paul},
+ title = {The Proposition Bank: An Annotated Corpus of Semantic Roles},
+ journal = {Comput. Linguist.},
+ issue_date = {March 2005},
+ volume = {31},
+ number = {1},
+ month = mar,
+ year = {2005},
+ issn = {0891-2017},
+ pages = {71--106},
+ numpages = {36},
+ doi = {10.1162/0891201053630264},
+ acmid = {1122628},
+ publisher = {MIT Press},
+ address = {Cambridge, MA, USA}
+} 
