fixed bibliography references; wording

--- a/status/report.tex
+++ b/status/report.tex
@@ -70,7 +70,7 @@ Jedem dieser Sätze wurden seine entsprechenden Argumente durch Annotatoren zuge
 
 \subsection{Tools}
 Zur Datenverarbeitung und Auswertung wird die Programmiersprache Python verwendet in der Version 3.4, um die Feature-Extraktion durchzuf\"uhren. Durch die Wahl von Python, bietet sich das NLTK als Ressource f\"ur Sprachverarbeitung an, entsprechend in der Version 3.0.0. Als Machine Learning Tool mit dem die unten aufgef\"uhrten
-Algorithmen verwendet werden Weka 3.7.11 eingesetzt.
+Algorithmen verwendet werden, wird Weka 3.7.11 eingesetzt.
 
 \subsection{Algorithmen}
 Im Laufe des Experiments werden drei verschiedene Klassifizierer eingesetzt, um das bestm\"ogliche Ergebnis in der Argumentklassifikation zu erreichen: eine Support Vector
