fixed Confusion Matrix

--- a/presentation/AalborgUniversityBeamer2/AAUsidebartheme.tex
+++ b/presentation/AalborgUniversityBeamer2/AAUsidebartheme.tex
@@ -308,19 +308,18 @@ j48 Tree          & ??             & ??             & ??
 \begin{frame}{Confusion Matrix}
 
 \begin{table}[h]
-\begin{tabular}{l|llllllll|l}
-a     b     c     d     e     f     g     h     & a     & b     & c     & d    & e   & f  & g & h & \textless-- classified as \\ \hline
-14497   348   361   272     0     4     0     1 & 14497 & 348   & 361   & 272  & 0   & 4  & 0 & 1 & a = ARG0                  \\
-291 11394  2143  1009   189    48     0     1   & 291   & 11394 & 2143  & 1009 & 189 & 48 & 0 & 1 & b = ARGM                  \\
-3119   707 17064   375    31    27     0     0  & 3119  & 707   & 17064 & 375  & 31  & 27 & 0 & 0 & c = ARG1                  \\
-180   792  1854  2163    29    23     0     0   & 180   & 792   & 1854  & 2163 & 29  & 23 & 0 & 0 & d = ARG2                  \\
-2   217    23   141   379     3     0     0     & 2     & 217   & 23    & 141  & 379 & 3  & 0 & 0 & e = ARG3                  \\
-37   289   144   147   170    99     0     0    & 37    & 289   & 144   & 147  & 170 & 99 & 0 & 0 & f = ARG4                  \\
-0    13     0     1     0     0     3     0     & 0     & 13    & 0     & 1    & 0   & 0  & 3 & 0 & g = ARG5                  \\
-5     0     0     0     0     0     0     0     & 5     & 0     & 0     & 0    & 0   & 0  & 0 & 0 &                          
+\begin{tabular}{llllllll|l}
+a     & b     & c     & d    & e   & f  & g & h & \textless-- classified as \\ \hline
+14497 & 348   & 361   & 272  & 0   & 4  & 0 & 1 & a = ARG0                  \\
+291   & 11394 & 2143  & 1009 & 189 & 48 & 0 & 1 & b = ARGM                  \\
+3119  & 707   & 17064 & 375  & 31  & 27 & 0 & 0 & c = ARG1                  \\
+180   & 792   & 1854  & 2163 & 29  & 23 & 0 & 0 & d = ARG2                  \\
+2     & 217   & 23    & 141  & 379 & 3  & 0 & 0 & e = ARG3                  \\
+37    & 289   & 144   & 147  & 170 & 99 & 0 & 0 & f = ARG4                  \\
+0     & 13    & 0     & 1    & 0   & 0  & 3 & 0 & g = ARG5                  \\
+5     & 0     & 0     & 0    & 0   & 0  & 0 & 0 & h = ARGA                 
 \end{tabular}
 \end{table}
-
 \end{frame}
 
 \begin{table}[h]
